# opencl-demos

./: CMakeLists.txt  LICENSE  README.md
list-devices/: CMakeLists.txt  list-devices.cpp
